# brainfuck

./: Cargo.toml  LICENSE  README.md
examples/: hello-world.bf
src/: interpreter.rs  main.rs  parser.rs  tape.rs  tokenizer.rs
src/commands/: check.rs  eval.rs  minify.rs  mod.rs  repl.rs  run.rs  utils.rs
