[package]
name = "brainfuck"
version = "0.1.0"
description = "A brainfuck utility written in rust"
edition = "2021"
license = "MIT"
authors = ["Mikkel-T <mikkel@mikkel-t.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
humansize = "1.1.1"
log = "0.4.0"
env_logger = "0.9.0"