[package]
name = "brainfuck"
version = "0.1.0"
description = "A command line tool for the brainfuck language written in Rust"
edition = "2021"
license = "MIT"
authors = ["Mikkel-T <mikkel@mikkel-t.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
humansize = "2.1"
log = "0.4"
env_logger = "0.11"
rustyline = "15.0.0"
crossterm = "0.28"
